# formalLanguagetTask1

./: CMakeLists.txt  README.md  SubstrAnalyser.cpp  SubstrAnalyser.h  main.cpp
cmake/: CodeCoverage.cmake
coverage/: index-sort-f.html  index-sort-l.html  index.html
coverage/FormalLangTask1/: SubstrAnalyser.cpp.func-sort-c.html  SubstrAnalyser.cpp.func.html  SubstrAnalyser.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  run_tests.cpp.func-sort-c.html  run_tests.cpp.func.html  run_tests.cpp.gcov.html
coverage/FormalLangTask1/tests/: SimpleTest.cpp.func-sort-c.html  SimpleTest.cpp.func.html  SimpleTest.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
tests/: SimpleTest.cpp  SimpleTest.h
